corrected spacing error

--- a/src/App.css
+++ b/src/App.css
@@ -170,7 +170,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 5px;
+  margin-bottom: -15px;
 }
 
 .forecastHigh p:not(:last-child) {
